integration test: erify cost given a package size with no extras

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Parcel Service!</title>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-  <!--<link href="css/triangle.css" rel="stylesheet" type="text/css">-->
+  <!--<link href="css/parcel.css" rel="stylesheet" type="text/css">-->
 </head>
 <body>
   <div class="container">
