--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,15 @@
 <h1>Parcel Service!</h1>
 <form action="/results">
   <div class="form-group">
-    <label>Dimensions</label>
-    <input id="side_a" name="side_a" class="form-control" type="text">
-    <input id="side_b" name="side_b" class="form-control" type="text">
-    <input id="side_c" name="side_c" class="form-control" type="text">
+    <label>Enter the dimensions and weight of your package:</label>
+    Length
+    <input id="length" name="length" class="form-control" type="text">
+    Width
+    <input id="width" name="width" class="form-control" type="text">
+    Height
+    <input id="height" name="height" class="form-control" type="text">
+    Weight
+    <input id="weight" name="weight" class="form-control" type="text">
   </div>
   <button type="submit" class="btn-success">Send</button>
 </form>
