fill out form fields to handle international shipping, gift wrapping, and priority; integration test to confirm adding of optional features carries through to result

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,6 +10,12 @@
     <input id="height" name="height" class="form-control" type="text">
     Weight
     <input id="weight" name="weight" class="form-control" type="text">
+    Do you want gift wrap (true/false)
+    <input id="gift_wrap" name="gift_wrap" class="form-control" type="text">
+    Is the destination domestic or international
+    <input id="destination" name="destination" class="form-control" type="text">
+    Select special shipping method: (overnight or twoday)
+    <input id="priority" name="priority" class="form-control" type="text">
   </div>
   <button type="submit" class="btn-success">Send</button>
 </form>
