css rules to override default bootstrap on form input width

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,14 +4,14 @@
     <label>Enter the dimensions and weight of your package:</label>
     <br />
     Length
-    <input id="length" name="length" class="form-control" type="number" min="1" max="120">
+    <input id="length" name="length" class="form-control" type="number" min="1" max="120" value="1">
     <!--<input type="number" name="quantity" min="1" max="5">-->
     Width
-    <input id="width" name="width" class="form-control" type="number" min="1" max="120">
+    <input id="width" name="width" class="form-control" type="number" min="1" max="120" value="1">
     Height
-    <input id="height" name="height" class="form-control" type="number" min="1" max="120">
+    <input id="height" name="height" class="form-control" type="number" min="1" max="120" value="1">
     Weight
-    <input id="weight" name="weight" class="form-control" type="number" min="1" max="120">
+    <input id="weight" name="weight" class="form-control" type="number" min="1" max="120" value="1">
     Do you want gift wrap (true/false)
     <input id="gift_wrap" name="gift_wrap" class="form-control" type="text">
     Is the destination domestic or international
