--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,7 @@
     Weight
     <input id="weight" name="weight" class="form-control" type="number" min="1" max="120" value="1">
     Do you want gift wrap (true/false)
-    <input id="gift_wrap" name="gift_wrap" class="form-control" type="checkbox">
+    <input id="gift_wrap" name="gift_wrap" class="form-control" type="checkbox" value="false">
     Is the destination domestic or international
     <input id="destination" name="destination" class="form-control" type="text">
     Select special shipping method: (overnight or twoday)
