modified form input to use check box in place of destiantion text input; css edits to clean up form layout

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,11 +12,15 @@
     <input id="height" name="height" class="form-control" type="number" min="1" max="120" value="1">
     Weight
     <input id="weight" name="weight" class="form-control" type="number" min="1" max="120" value="1">
-    Do you want gift wrap (true/false)
-    <input id="gift_wrap" name="gift_wrap" class="form-control" type="checkbox" value="false">
-    Is the destination domestic or international
-    <input id="destination" name="destination" class="form-control" type="text">
-    Select special shipping method: (overnight or twoday)
+    <br />
+    <input id="gift_wrap" name="gift_wrap" class="form-control" type="checkbox" value="false"> Do you want gift wrap?
+    <br /><br />
+
+
+    <input id="destination" name="destination" class="form-control" type="checkbox">
+    Is the destination international?
+    <br /><br />
+    Shipping method:
     <!--<input id="priority" name="priority" class="form-control" type="text">-->
     <select id="priority" name="priority" value="Standard">
       <option name="standard" value="standard">Standard</option>
