update instance variable handling in route for more attracive output

--- a/views/results.erb
+++ b/views/results.erb
@@ -1,1 +1,12 @@
-<%= @total_shipping_cost %>
+<h1>Your Parcel Details</h1>
+<h2>Parcel Size</h2>
+<h3><%= @size %></h3>
+
+<h2>Parcel Shipping Method</h2>
+<h3><%= @shipping_method %></h3>
+
+<h2>Parcel Destination</h2>
+<h3><%= @destination %></h3>
+
+<h2>Total Shipping Cost</h2>
+<h3>$<%= @total_shipping_cost %></h3>
