corrects for missing trailing zero in certain monetary values (e.g. 2.00 instead of 2.0)

--- a/views/results.erb
+++ b/views/results.erb
@@ -6,7 +6,7 @@
 <h3><%= @shipping_method %></h3>
 
 <h2>Parcel Destination</h2>
-<h3><%= @destination %></h3>
+<h3><%= @destination.capitalize() %></h3>
 
 <h2>Total Shipping Cost</h2>
 <h3>$<%= @total_shipping_cost %></h3>
