add indication of units of measurement to input form

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,14 +3,14 @@
   <div class="form-group">
     <label>Enter the dimensions and weight of your package:</label>
     <br />
-    Length
+    Length (inches)
     <input id="length" name="length" class="form-control" type="number" min="1" max="120" value="1">
     <!--<input type="number" name="quantity" min="1" max="5">-->
-    Width
+    Width (inches)
     <input id="width" name="width" class="form-control" type="number" min="1" max="120" value="1">
-    Height
+    Height (inches)
     <input id="height" name="height" class="form-control" type="number" min="1" max="120" value="1">
-    Weight
+    Weight (lbs)
     <input id="weight" name="weight" class="form-control" type="number" min="1" max="120" value="1">
     <br />
     <input id="gift_wrap" name="gift_wrap" class="form-control" type="checkbox" value="false"> Do you want gift wrap?
